--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,9 +3,18 @@
 ---
 
 <div class="w-full p-4 ">
-    <div class="max-w-5xl mx-auto flex justify-between items-center">
+    <div class="max-w-6xl mx-auto flex justify-between items-center">
         <div class="">
-            <img src="/logo.svg" alt="">
+            <a href="/">
+                <img src="/logo.svg" alt="">
+            </a>
+        </div>
+        <div class="flex flex-wrap gap-4 text-gray-700">
+            <a href="/about" class=" text-lg p-3">About</a>
+            <a href="/join" class=" text-lg p-3">Become A Member</a>
+            <a class=" text-lg border border-purple-600 p-4 hover:text-white hover:bg-purple-600" href="/Support">
+                Support Us
+            </a>
         </div>
     </div>
 </div>
