--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Footer from '../components/footer.astro';
+import Header from '../components/header.astro';
 
 export interface Props {
 	title: string;
@@ -13,9 +14,14 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="stylesheet" href="/css/globals.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
 		<title>{title}</title>
 	</head>
 	<body class="bg-gray-100">
+		<Header/>
 		<slot/>
 		<Footer/>
 	</body>
