--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,45 +1,69 @@
 ---
+import CallToAction from "../components/CallToAction.svelte";
 import Header from "../components/header.astro";
+import ImageCard from "../components/ImageCard.svelte";
+import SimpleCard from "../components/SimpleCard.svelte";
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
 <MainLayout title="Welcome to ohalanʌ́ht">
-	<Header/>
-	<div class="max-w-5xl mx-auto p-4">
+	<div class="md:absolute max-w-[1100px] right-0 top-[100px] -z-10">
+		<img src="/heading-graphic.png" alt="">
+	</div>
+	<div class="max-w-6xl mx-auto p-4">
 		
-		<div class="w-full flex justify-center min-h-screen items-center">
-			<h1 class="text-7xl font-extralight text-center capitalize">Empowering creativity outside the <span class="fancy-underline">hot dish.</span></h1>
-		</div>
-
-		<div class="w-full min-h-[500px] flex flex-wrap">
-			<div class="flex flex-col gap-4 max-w-[500px]">
-				<h1 class="text-5xl font-extralight">The “Modern Multimedia”</h1>
-				<ul class="text-2xl font-extralight">
-					<li>Member-owned collective</li>
-					<li>Provide artists space to elevate the next generation’s taste for multimedia</li>
-					<li>Photography, Comics, Film, 2D and 3D Animation</li>
-				</ul>
-			</div>
-			<div class="max-w-[400px]">
-				<img class="w-full" src="/sun.svg" alt="">
+		<div class="w-full flex flex-wrap md:min-h-screen min-h-[500px] items-center relative">
+			<div class="max-w-[700px]">
+				<h1 class="sm:text-8xl text-5xl font-heading capitalize text-orange-500">Empowering creativity outside the <span class="fancy-underline">hot dish.</span></h1>
 			</div>
 		</div>
 
-		<div class="w-full min-h-[500px] flex flex-wrap">
-			<div class="flex flex-col gap-4 max-w-[500px]">
-				<h1 class="text-5xl font-extralight">Why</h1>
-				<ul class="text-2xl font-extralight">
-					<li>Member owned - More creative freedom</li>
-					<li>Space to resist monopolization and kafkaesque production pipelines.
-					</li>
-					<li>Audience and artist as one community</li>
-				</ul>
+		<div class="h-[200px]"/>
+
+		<div class="w-full min-h-[500px] flex flex-wrap gap-3">
+			<div class="flex flex-col gap-4 max-w-[670px]">
+				<h1 class="sm:text-8xl text-5xl font-heading text-gray-700">The “Modern Multimedia”</h1>
+				<p class="text-2xl font-extralight">
+					Being an artist isn't easy! We provide artists space to elevate the next generation’s taste for multimedia. 
+				</p>
 			</div>
-			<div class="max-w-[400px]">
-				<img class="w-[300px]" src="/check.svg" alt="">
+
+			
+			<div class="max-w-[700px] flex flex-wrap self-start gap-4">
+				<SimpleCard title={"Photo / Film?"} description={"Our studio spaces provide an atmosphere to capture emotion in high fidelity."}/>
+
+				<SimpleCard title={"Comics?"} description={"We know comics are a sensitive craft, so we provide a space to nurture it."}/>
+
+				<SimpleCard title={"Animator?"} description={"We're suckers for animation. Let's animate joyful stories together."}/>
+
 			</div>
 		</div>
-		
+
+		<div class="h-[300px]"/>
+
+
+		<div class="w-full min-h-[500px]">
+				<h1 class="sm:text-8xl text-5xl font-heading text-gray-700 mb-4">Why</h1>
+				
+				<div class="flex flex-wrap gap-4">
+					<ImageCard img={'/sunshine.svg'} title={"Member Owned"} description={"We are member owned, which means creative freedom...without the BS."}/>
+
+					<ImageCard img={'/stop.svg'} title={"Resist Monopolization"} description={"We see ourselves as a force against the monopolization and exploitation of artists."}/>
+
+					<ImageCard img={'/crowd.svg'} title={"Artists As Audience"} description={"The opportunity to have practicing artists be your audience. Priceless feedback."}/>
+
+				</div>
+		</div>
+
+		<div class="h-[100px]"/>
+
+		<CallToAction/>
 	</div>
 </MainLayout>
 
+<!-- <ul class="text-2xl font-extralight">
+	<li>Member owned - More creative freedom</li>
+	<li>Space to resist monopolization and kafkaesque production pipelines.
+	</li>
+	<li>Audience and artist as one community</li>
+</ul> -->
