--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,6 +2,7 @@
 import Footer from '../components/footer.astro';
 import Header from '../components/header.astro';
 import CallToAction from '../components/CallToAction.svelte';
+import Fqas from '../components/Fqas.svelte';
 
 export interface Props {
 	title: string;
@@ -24,6 +25,9 @@ const { title } = Astro.props;
 	<body class="bg-gray-100">
 		<Header/>
 		<slot/>
+
+		<div class="h-[200px]"/>
+		<Fqas/>
 
 		<div class="h-[200px]"/>
 		<div class="max-w-6xl mx-auto mb-8">
