add the Why section

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,14 +37,36 @@ import MainLayout from "../layouts/MainLayout.astro";
     </div>
 
     <div class="w-full bg-slate-50">
-        <div class="max-w-6xl mx-auto p-4">
-            <h1 class="text-5xl text-gray-700 font-heading mb-8">
-                Our Founders
-            </h1>
-            <div class=" flex items-center">
-                <AllArtists/>
+        <div class="max-w-6xl mx-auto p-4 min-h-[500px] flex items-center">
+            <div class="w-full">
+                <h1 class="text-5xl text-gray-700 font-heading mb-8">
+                    Our Founders
+                </h1>
+                <div class=" flex items-center">
+                    <AllArtists/>
+                </div>
             </div>
         </div>
         
+    </div>
+
+    <div class="max-w-6xl mx-auto p-4 min-h-[500px] flex items-center">
+        <div class="w-full">
+            <h1 class="text-5xl text-gray-700 font-heading mb-8">
+                Why we create here, in a smaller collective?
+            </h1>
+            <div class="t font-extralight flex flex-col gap-8">
+                <p class="text-2xl">
+                    Our collective is member owned, which allows much more creative freedom than can be explored in a larger commercial studio. Allowing our artists access to the tools and space they need is crucial to circumnavigating the kafkaesque production lines of more mainstream media outlets. What does this mean for our media? It means that our artists can create work with more diversity, more originality, and the kind of passion that drives personally motivated projects. 
+                </p>
+                <p class="text-2xl">
+                    Furthermore, being a collective of our size means that Ohalanʌ́ht will have a deeper relationship with the surrounding community. Our artists are ingrained in the city we choose to live and work in. We want to break down the wall between media creators and media consumers, so that artists and audience can become one community. We want to create art that resonates with the people we see around us every day.
+                </p>
+                <p class="text-2xl">
+                    And if art from Ohalanʌ́ht inspires a neighbor to start creating too, that’s great! We’ll have gathered a tight-knit group of talented animators, photographers, comic artists and filmmakers to network with and learn from. When artists and audience become one community, the arts become more accessible to everyone.
+
+                </p>
+            </div>
+        </div>
     </div>
 </MainLayout>
